overflow scroll fixed

--- a/client/src/components/TaskList/TaskList.module.css
+++ b/client/src/components/TaskList/TaskList.module.css
@@ -7,7 +7,7 @@
 }
 
 .taskwrapper {
-    @apply h-full border-b-2
+    @apply h-full border-b-2 overflow-y-scroll
 }
 
 .taskfooter {
